--- a/_notebooks/2021-01-08-Probabilistic assessment-of-safety-underreporting.ipynb
+++ b/_notebooks/2021-01-08-Probabilistic assessment-of-safety-underreporting.ipynb
@@ -650,7 +650,7 @@
     }
    ],
    "source": [
-    "#hide_\n",
+    "#hide_input\n",
     "mean_rates = tf.math.reduce_mean(rates_, axis=0)\n",
     "std_rates = tf.math.reduce_std(rates_, axis=0)\n",
     "\n",
