new post and improvement

--- a/_notebooks/2021-01-08-Probabilistic assessment-of-safety-underreporting.ipynb
+++ b/_notebooks/2021-01-08-Probabilistic assessment-of-safety-underreporting.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"Probabilistic Assessment of Safety Underreporting\"\n",
-    "> \"Awesome summary\"\n",
+    "# \"Probabilistic assessment of safety underreporting\"\n",
+    "> \"Adverse event underreporting is a problem that sometimes affects clinical trials. Probabilistic programming is the modern way to address this issue.\"\n",
     "\n",
     "- toc: false\n",
     "- branch: master\n",
@@ -22,6 +22,8 @@
     "This post presents a practical application of probabilistic programming and explores some technical details of a recent [preprint](https://www.medrxiv.org/content/10.1101/2020.12.18.20245068v1) where Timothé Ménard and I proposed a Bayesian model for the detection of adverse event underreporting in clinical trials.\n",
     "\n",
     "A clinical trial is usually run across several investigator sites, which are required to report to the trial sponsor adverse events experienced by enrolled subjects. This is necessary to assess the safety of the intervention under investigation. Underreporting from certain sites has been a recurrent issue. Trial sponsors and health authorities rely on audits and inspections to ensure completeness of the collected safety data. This effort can and should be informed by statistical analysis of the adverse event reporting process with a focus on identifying sites that report at lower rates.\n",
+    "\n",
+    "The main hurdle is that you are looking for missing data that you do not know is missing. We developed a solution around an observational model for adverse event reporting and a way to characterizing outlying investigator sites.\n",
     "\n",
     "The relevant data is the count of adverse events reported by every patient enrolled in a study and their site assignment. To illustrate our methodology, we use data from the control arm of NCT00617669, an oncology study from [Project Data Sphere](https://www.projectdatasphere.org/)."
    ]
@@ -113,7 +115,7 @@
     }
    ],
    "source": [
-    "#hide_input\n",
+    "#hide\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
