--- a/_notebooks/2021-02-01-Variational-inference-with-tfp.ipynb
+++ b/_notebooks/2021-02-01-Variational-inference-with-tfp.ipynb
@@ -80,7 +80,11 @@
     "    tfd.Sample(tfd.Normal(loc=0., scale=1.), true_params.shape[0]),\n",
     "    # observations\n",
     "    lambda features: tfd.Bernoulli(logits=true_offset +\n",
-    "                                   tf.tensordot(features, tf.convert_to_tensor(true_params, dtype=tf.float32), axes=1))\n",
+    "                                   tf.tensordot(features,\n",
+    "                                                tf.convert_to_tensor(\n",
+    "                                                    true_params, \n",
+    "                                                    dtype=tf.float32),\n",
+    "                                                axes=1))\n",
     "])\n",
     "\n",
     "[X, y] = true_generating_process.sample(500)"
@@ -130,7 +134,9 @@
     "    #alpha\n",
     "    tfd.Normal(loc=0., scale=20.),\n",
     "    #observations\n",
-    "    lambda alpha, betas: tfd.Independent(tfd.Bernoulli(logits=alpha + tf.tensordot(X, betas, axes=1)), reinterpreted_batch_ndims=1)\n",
+    "    lambda alpha, betas: tfd.Independent(\n",
+    "        tfd.Bernoulli(logits=alpha + tf.tensordot(X, betas, axes=1)),\n",
+    "        reinterpreted_batch_ndims=1)\n",
     "])\n",
     "\n",
     "# Specify the MCMC algorithm.\n",
@@ -347,7 +353,7 @@
     }
    ],
    "source": [
-    "#hide_input\n",
+    "#hide\n",
     "az.summary(az_trace)"
    ]
   },
@@ -401,7 +407,9 @@
     "    #offset\n",
     "    tfd.Normal(loc=0., scale=20.),\n",
     "    #observations\n",
-    "    lambda offset, betas: tfd.Independent(tfd.Bernoulli(logits=offset + tf.tensordot(X, betas, axes=1)), reinterpreted_batch_ndims=1)\n",
+    "    lambda offset, betas: tfd.Independent(\n",
+    "        tfd.Bernoulli(logits=offset + tf.tensordot(X, betas, axes=1)),\n",
+    "        reinterpreted_batch_ndims=1)\n",
     "])\n",
     "\n",
     "unnormalized_log_prob = lambda *x: mdl_logreg.log_prob(x + (y,))"
@@ -781,7 +789,9 @@
     "    tfk.layers.Activation('sigmoid')\n",
     "])\n",
     "\n",
-    "classical_model.compile(optimizer=tf.optimizers.Adam(learning_rate=0.01), loss=tfk.losses.BinaryCrossentropy())\n",
+    "classical_model.compile(optimizer=tf.optimizers.Adam(learning_rate=0.01),\n",
+    "                        loss=tfk.losses.BinaryCrossentropy()\n",
+    "                       )\n",
     "\n",
     "classical_model.fit(X, y, epochs=50)"
    ]
@@ -825,9 +835,13 @@
     "\n",
     "# Specify the prior over `keras.layers.Dense` `kernel` and `bias`.\n",
     "def prior_ridge(kernel_size, bias_size, dtype=None):\n",
-    "    return lambda _: tfd.Independent(tfd.Normal(loc=tf.zeros(kernel_size + bias_size),\n",
-    "                                                scale=tf.concat([5*tf.ones(kernel_size), 20*tf.ones(bias_size)], axis=0)),\n",
-    "                                     reinterpreted_batch_ndims=1)\n",
+    "    return lambda _: tfd.Independent(\n",
+    "        tfd.Normal(loc=tf.zeros(kernel_size + bias_size),\n",
+    "                   scale=tf.concat([5*tf.ones(kernel_size),\n",
+    "                                    20*tf.ones(bias_size)],\n",
+    "                                   axis=0)),\n",
+    "        reinterpreted_batch_ndims=1\n",
+    "    )\n",
     "\n",
     "# Specify the model\n",
     "probabilistic_model = tf.keras.Sequential([\n",
@@ -889,11 +903,17 @@
     "params_history = []\n",
     "\n",
     "params_callback = tfk.callbacks.LambdaCallback(\n",
-    "    on_epoch_end=lambda epoch, logs: params_history.append(np.array(get_model_stats(probabilistic_model))))\n",
+    "    on_epoch_end=lambda epoch, logs: params_history.append(\n",
+    "        np.array(get_model_stats(probabilistic_model))))\n",
     "\n",
     "\n",
-    "probabilistic_model.compile(optimizer=tf.optimizers.Adam(learning_rate=0.01), loss=negloglik)\n",
-    "history = probabilistic_model.fit(X, y, epochs=200, verbose=False, callbacks=[params_callback])"
+    "probabilistic_model.compile(optimizer=tf.optimizers.Adam(learning_rate=0.01),\n",
+    "                            loss=negloglik\n",
+    "                           )\n",
+    "\n",
+    "history = probabilistic_model.fit(X, y,\n",
+    "                                  epochs=200,\n",
+    "                                  callbacks=[params_callback])"
    ]
   },
   {
@@ -984,6 +1004,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
     "bnn_mean, bnn_std = get_model_stats(probabilistic_model)"
    ]
   },
@@ -1125,7 +1146,7 @@
     "\n",
     "While `tfp.vi` is applicable to a wider class of problems, `tfp.layers` gives access to Keras functionalities such as callbacks, and, more interestingly, batch training with the `tf.data.Dataset` API.\n",
     "\n",
-    "There is no definitive rule for which method to apply to which problem, but it is important to be aware of the limitations and benefits of variational inference algorithms before using them. In this example we knew the true parameters in advance, but in real applications, one should have validation procedures in place to ensure the variational family is large enough to capture the phenomenon of interest, for instance by comparison with MCMC results, or for prediction tasks with a test sets where the labels/outcomes are known."
+    "There is no definitive rule for which method to apply to which problem, but it is important to be aware of the limitations and benefits of variational inference algorithms before using them. In this example we knew the true parameters in advance, but in real applications, one should have validation procedures in place to ensure the variational family is large enough to capture the phenomenon of interest, for instance by comparison with MCMC results, or for prediction tasks with a test set where the labels/outcomes are known."
    ]
   }
  ],
