--- a/_notebooks/2021-02-01-Variational-inference-with-tfp.ipynb
+++ b/_notebooks/2021-02-01-Variational-inference-with-tfp.ipynb
@@ -812,7 +812,8 @@
    "outputs": [],
    "source": [
     "#hide_output\n",
-    "# Define the negative log likelihood loss function for the `DistributionLambda` head of the model.\n",
+    "# Define the negative log likelihood loss function for the `DistributionLambda`\n",
+    "# head of the model.\n",
     "negloglik = lambda y, rv_y: -rv_y.log_prob(y)\n",
     "\n",
     "# Define a function to constrain the scale parameters to the real positive\n",
@@ -1020,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1118,7 @@
        "alpha           1.000      1.223     0.142    1.203   0.131     1.218    0.124"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
