--- a/_notebooks/2021-01-13-Anomaly-detection-in-protocol-deviations.ipynb
+++ b/_notebooks/2021-01-13-Anomaly-detection-in-protocol-deviations.ipynb
@@ -851,7 +851,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This method illustrates the potential of Bayesian modeling to supercharge a regression analysis toolbox with with a variety of likelihood functions that can capture the intricacies of the data generating process and inference methods that are more flexible in quantifying uncertainties than the standard GLM methods. These properties are particularly helpful in practical tasks such as anomaly detection or risk management that combine expert insights with quantitative modeling."
+    "This method illustrates the potential of Bayesian modeling to supercharge a regression analysis toolbox with a variety of likelihood functions that can capture the intricacies of the data generating process and inference methods that are more flexible in quantifying uncertainties than the standard GLM methods. These properties are particularly helpful in practical tasks such as anomaly detection or risk management that combine expert insights with quantitative modeling."
    ]
   }
  ],
