--- a/_notebooks/2021-02-09-Contextual_bandits.ipynb
+++ b/_notebooks/2021-02-09-Contextual_bandits.ipynb
@@ -427,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Learning strategy\n",
+    "## Learning strategy\n",
     "In the learning phase of the model, at each step a new context $x_i$ is observed (or drawn from the population), an action $a_i$ is chosen, a reward $r_i$ is observed (or simulated with `bandit.pull`), and the model is updated."
    ]
   },
@@ -437,6 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#collapse-hide\n",
     "class BayesianStrategy(object):\n",
     "    \"\"\"\n",
     "    Implements an online, learning strategy to solve\n",
@@ -446,7 +447,22 @@
     "      bandit: an instance of the ContextualBandit class\n",
     "    \n",
     "    methods:\n",
-    "      thompson_randomize\n",
+    "      thompson_randomize(X): draws logits from the posterior distribution and\n",
+    "                             returns the arms with the highest values\n",
+    "      \n",
+    "      _update_step(X, y): updates the model with the new observations\n",
+    "      \n",
+    "      one_trial(n, population): samples n elements from population, selects\n",
+    "                             an arm for each of them through Thompson sampling,\n",
+    "                             pulls it, updates the model\n",
+    "      \n",
+    "      train_on_data(X_train, all_outcomes_train): implements Thompson sampling\n",
+    "                             on pre-sampled data where an omnicient being has\n",
+    "                             pulled all the arms. The reason is to compare with\n",
+    "                             standard Bayesian inference on the same data\n",
+    "                            \n",
+    "      evaluate_training_decisions: returns statistics about action selection\n",
+    "                             during training\n",
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self, bandit):\n",
