--- a/_notebooks/2021-02-01-Variational-inference-with-tfp.ipynb
+++ b/_notebooks/2021-02-01-Variational-inference-with-tfp.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "If you plan to automate the execution of multible Bayesian inference jobs, typically to regularly update your posterior distribution as new data comes in, you might find that MCMC algorithms take too long to sample their chains. Variational inference can speed things up considerably (you can find a good introduction [here](https://arxiv.org/abs/1601.00670)), at the expense of converging only to an approximation of the true posterior, which is often good enough for practical applications.\n",
     "\n",
-    "Lately, I have been experimenting with TensorFlow-Probability variational inference tools, namely [`tfp.vi.fit_surrogate_posterior`](https://www.tensorflow.org/probability/api_docs/python/tfp/vi/fit_surrogate_posterior) and [`tfp.layers`](https://www.tensorflow.org/probability/api_docs/python/tfp/layers/DenseVariational), to see how to integrate them into some of my projects.\n",
+    "Lately, I have been experimenting with TensorFlow-Probability that implement [automatic differentiation variational inference](https://arxiv.org/abs/1603.00788), namely [`tfp.vi.fit_surrogate_posterior`](https://www.tensorflow.org/probability/api_docs/python/tfp/vi/fit_surrogate_posterior) and [`tfp.layers`](https://www.tensorflow.org/probability/api_docs/python/tfp/layers/DenseVariational), to see how to integrate them into some of my projects.\n",
     "\n",
     "I collected insights from various guides, tutorials, and code documentation, that I am summarizing here, mainly for future reference, but also for the benefit of people I will manage to convert to Bayesianism. The code is applied to a toy example of Bayesian logistic regression on simulated data, because it is helpful in this context to compare results to the true parameters of the data generating process."
    ]
@@ -881,7 +881,7 @@
     "\n",
     "where $N$ is the number of data points. The first term in the sum corresponds to the negative log-likelihood passed as the `loss` argument to `probabilistic_model.compile`. The rest of the sum is a regularization implemented in `tfp.layers.DenseVariational`, where $Q(Z)$ corresponds to the `make_posterior_fn` argument, $P(Z)$ to `make_prior_fn`, and $N$ to `kl_weight=1/X.shape[0]`.\n",
     "\n",
-    "As a side note, the sample size argument in `tfp.vi.fit_surrogate_posterior` gives the number of points sampled from $Q$ to compute a Monte Carlo estimate of the negative ELBO.\n",
+    "As a side note, the sample size argument in `tfp.vi.fit_surrogate_posterior` gives the number of points sampled from $Q$ to compute a Monte Carlo estimate of the gradient of the ELBO.\n",
     "\n",
     "With the Keras API, we can use callbacks to collect training statistics or implement early stopping policies, and we have access to the `tf.data.Dataset` API for batch training (`kl_weight` would need to be adapted accordingly). Here we use callbacks to record the parameters of the variational distribution during training."
    ]
