--- a/_notebooks/2021-06-05-Gaussian-random-walks-with-tfp.ipynb
+++ b/_notebooks/2021-06-05-Gaussian-random-walks-with-tfp.ipynb
@@ -253,7 +253,10 @@
     "    tfd.Exponential(0.1, name='nu'),\n",
     "    #returns\n",
     "    lambda nu, volatility, step_size: tfd.Independent(\n",
-    "        tfd.StudentT(df=nu[...,tf.newaxis], loc=0, scale=tf.math.exp(volatility), name='returns'),\n",
+    "        tfd.StudentT(df=nu[...,tf.newaxis],\n",
+    "                     loc=0,\n",
+    "                     scale=tf.math.exp(volatility),\n",
+    "                     name='returns'),\n",
     "        reinterpreted_batch_ndims=1\n",
     "    )\n",
     "])"
