forgot the header...

--- a/_notebooks/2021-12-04-Hamiltonian-mechanics-with-JAX.ipynb
+++ b/_notebooks/2021-12-04-Hamiltonian-mechanics-with-JAX.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# \"Hamiltonian mechanics with JAX\"\n",
+    "> \"An application of automatic differentiation with JAX in classical mechanics.\"\n",
+    "\n",
+    "- toc: false\n",
+    "- branch: master\n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- author: Yves Barmaz\n",
+    "- categories: [JAX, autograd, differential geometry, classical mechanics]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -23,8 +38,6 @@
     "id": "rprqGRy5dNal"
    },
    "source": [
-    "# Hamiltonian Mechanics with JAX\n",
-    "\n",
     "I finally spent some time playing around with JAX. I was especially curious about its automatic differentiation system, which is obviously very useful to compute gradients in machine learning, but also opens up new possibilities for physical modeling. In particular, [the Autodiff Cookbook](https://jax.readthedocs.io/en/latest/notebooks/autodiff_cookbook.html) advertises the correspondence between the `grad` API and differential geometry, which is the fundamental language of classical mechanics.\n",
     "\n",
     "Concretely, you can quickly define functions on the phase space with `jax.numpy` and then automatically compute their gradients. The phase space is the space of all possible states of a physical system, for instance the positions $\\vec x_i$ of its constituent particles and their momenta $\\vec p_i$, or the orientation of a rigid body and its angular momentum. In general, the coordinates of a phase space can always be locally chosen so that they are split into positions $\\mathbf{q} = (q_1, \\dots, q_n)$ and conjugate momenta $\\mathbf{p} = (p_1, \\dots, p_n)$, and their time evolution is given by the equations of motion\n",
