--- a/_notebooks/2021-12-04-Hamiltonian-mechanics-with-JAX.ipynb
+++ b/_notebooks/2021-12-04-Hamiltonian-mechanics-with-JAX.ipynb
@@ -43,10 +43,10 @@
     "Concretely, you can quickly define functions on the phase space with `jax.numpy` and then automatically compute their gradients. The phase space is the space of all possible states of a physical system, for instance the positions $\\vec x_i$ of its constituent particles and their momenta $\\vec p_i$, or the orientation of a rigid body and its angular momentum. In general, the coordinates of a phase space can always be locally chosen so that they are split into positions $\\mathbf{q} = (q_1, \\dots, q_n)$ and conjugate momenta $\\mathbf{p} = (p_1, \\dots, p_n)$, and their time evolution is given by the equations of motion\n",
     "\n",
     "$$\n",
-    "\\begin{align*} \n",
+    "\\begin{aligned} \n",
     "\\dot{\\mathbf{q}} &=  \\frac{\\partial H}{\\partial \\mathbf{p}} = \\lbrace \\mathbf{q}, H \\rbrace \\\\ \n",
-    "\\dot{\\mathbf{p}} &=  -\\frac{\\partial H}{\\partial \\mathbf{q}} = \\lbrace \\mathbf{p}, H \\rbrace\n",
-    "\\end{align*}\n",
+    "\\dot{\\mathbf{p}} &=  -\\frac{\\partial H}{\\partial \\mathbf{q}} = \\lbrace \\mathbf{p}, H \\rbrace \n",
+    "\\end{aligned} \\tag{1}\n",
     "$$\n",
     "\n",
     "where $H(\\mathbf{q}, \\mathbf{p})$ is the *Hamiltonian function* of the system, or simply the *Hamiltonian*, which is essentially its energy. With automatic differentiation, all you need to build this set of differential equations is to specify the Hamiltonian function, which can spare you a lot of pain.\n",
@@ -57,13 +57,13 @@
     "\\lbrace f, g \\rbrace = \\sum_{i=1}^n\\left(\n",
     "  \\frac{\\partial f}{\\partial q_i}\\frac{\\partial g}{\\partial p_i}\n",
     "  - \\frac{\\partial f}{\\partial p_i}\\frac{\\partial g}{\\partial q_i}\n",
-    "\\right)\n",
+    "\\right) \\tag{2}\n",
     "$$\n",
     "\n",
     "for any two functions $f$ and $g$ on the phase space. Together with the Hamiltonian function, the Poisson bracket encodes the time evolution of any observable of the system (a quantity that depends on the state of the system and can be measured),\n",
     "\n",
     "$$\n",
-    "\\frac d{dt}f(\\mathbf{q}, \\mathbf{p}, t) = \\lbrace f, H \\rbrace + \\frac{\\partial f}{\\partial t}.\n",
+    "\\frac d{dt}f(\\mathbf{q}, \\mathbf{p}, t) = \\lbrace f, H \\rbrace + \\frac{\\partial f}{\\partial t}. \\tag{3}\n",
     "$$\n",
     "\n",
     "The mathematical interpretation is that the Poisson bracket transforms the Hamiltonian function $H$ into a vectorfield $\\lbrace \\cdot, H \\rbrace$, the so-called *Hamiltonian vectorfield*.\n",
