--- a/_notebooks/2021-12-04-Hamiltonian-mechanics-with-JAX.ipynb
+++ b/_notebooks/2021-12-04-Hamiltonian-mechanics-with-JAX.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "As an example, we can consider the harmonic oscillator, the Drosophila of theoretical physics, with Hamiltonian\n",
     "\n",
-    "$$H(\\mathbf{q}, \\mathbf{p}) = \\mathbf{p}^2/2m + k \\mathbf{q}^2/2, \\tag{4}$$\n",
+    "$$H(\\mathbf{q}, \\mathbf{p}) = \\frac{\\mathbf{p}^2}{2m} + k \\frac{\\mathbf{q}^2}{2}, \\tag{4}$$\n",
     "\n",
     "and we set $m=k=1$ for convenience. Two observables are simply the position  and the momentum."
    ]
