--- a/_notebooks/2022-02-23-Bayesian-Poisson-factorization.ipynb
+++ b/_notebooks/2022-02-23-Bayesian-Poisson-factorization.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A lot of recommender systems are built on [matrix factorization](https://en.wikipedia.org/wiki/Matrix_factorization_(recommender_systems)_) models, where the partially observed matrix of user/item interactions is approximated by a product of matrices encoding latent characteristics of users and items. They can be corrected by user and item bias terms, and modified by activation functions that map to the data type of the observed interactions (e.g. binary kudos on Strava activities, counts of visits of a YouTube channel, ratings on Tripadvisor, or time spent watching a TikTok video before swiping up).\n",
+    "A lot of recommender systems are built on [matrix factorization](https://en.wikipedia.org/wiki/Matrix_factorization_(recommender_systems)#) models, where the partially observed matrix of user/item interactions is approximated by a product of matrices encoding latent characteristics of users and items. They can be corrected by user and item bias terms, and modified by activation functions that map to the data type of the observed interactions (e.g. binary kudos on Strava activities, counts of visits of a YouTube channel, ratings on Tripadvisor, or time spent watching a TikTok video before swiping up).\n",
     "\n",
     "In machine learning, these matrix factorizations are often implemented as embeddings into latent spaces followed by scalar products of the user latent vectors by the item latent vectors, and the model is fit to historical data with a gradient descent algorithm. A [Keras tutorial on collaborative filtering](https://keras.io/examples/structured_data/collaborative_filtering_movielens/) describes the methodology with the Movielens dataset.\n",
     "\n",
